src/config/snapshots/cargo_leptos__config__tests__workspace_project2.snap
---
source: src/config/tests.rs
expression: conf
---
Config {
    projects: [
        Project {
            name: "project2",
            lib: LibPackage {
                name: "project2",
                rel_dir: "project2",
                wasm_file: SourcedSiteFile {
                    source: "target/front/wasm32-unknown-unknown/debug/project2.wasm",
                    dest: "target/site/project2/pkg/project2.wasm",
                    site: "pkg/project2.wasm",
                },
                js_file: SiteFile {
                    dest: "target/site/project2/pkg/project2.js",
                    site: "pkg/project2.js",
                },
                features: [
                    "hydrate",
                ],
                default_features: false,
                output_name: "project2",
                src_paths: "project2/src",
                profile: Debug,
                ..
            },
            bin: BinPackage {
                name: "project2",
                rel_dir: "project2",
                exe_file: "target/debug/project2",
                target: "project2",
                features: [
                    "ssr",
                ],
                default_features: false,
                src_paths: "project2/src",
                profile: Debug,
                bin_args: None,
                ..
            },
            style: StyleConfig {
                file: Some(
                    SourcedSiteFile {
                        source: "project2/src/main.scss",
                        dest: "target/site/project2/pkg/project2.css",
                        site: "pkg/project2.css",
                    },
                ),
                browserquery: "defaults",
                tailwind: None,
                site_file: SiteFile {
                    dest: "target/site/project2/pkg/project2.css",
                    site: "pkg/project2.css",
                },
            },
            watch: true,
            release: false,
            precompress: false,
            js_minify: false,
            split: false,
            hot_reload: false,
            site: Site {
                addr: 127.0.0.1:3000,
                reload: 127.0.0.1:3001,
                root_dir: "target/site/project2",
                pkg_dir: "pkg",
                file_reg: {},
                ext_file_reg: {},
            },
            end2end: None,
            assets: Some(
                AssetsConfig {
                    dir: "project2/src/assets",
                },
            ),
            server_fn_prefix: None,
            disable_server_fn_hash: false,
            disable_erase_components: false,
            always_erase_components: false,
            server_fn_mod_path: false,
            wasm_opt_features: None,
            shutdown: ShutdownPolicy {
                graceful: true,
                timeout: 10s,
                unix_signal: SIGINT,
            },
            ..
        },
    ],
    cli: Opts {
        release: false,
        precompress: false,
        hot_reload: false,
        project: Some(
            "project2",
        ),
        features: [],
        lib_features: [],
        lib_cargo_args: None,
        bin_features: [],
        bin_cargo_args: None,
        wasm_debug: false,
        verbose: 0,
        clear: false,
        js_minify: false,
        split: false,
        frontend_only: false,
        server_only: false,
        graceful_shutdown: None,
        graceful_shutdown_timeout_secs: None,
        graceful_shutdown_unix_signal: None,
    },
    watch: true,
    ..
}
